@@ -1,3 +1,6 @@
+20110810
+	Progress now shown with progressmeter from OpenSSH
+
 20110809
 	Release 0.4.2.2
 	Cleaned up download.c
